--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - 3.4
   - 3.5
   - 3.6
-  - pypy-5.4.1
+  - pypy
+  - pypy3
 script:
   - coverage run -m zope.testrunner --test-path=src  --auto-color --auto-progress
 
