--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,20 @@
 [tox]
-envlist = py27,py34,py35,py36,pypy
+envlist =
+    py27,py34,py35,py36,pypy,pypy3,coverage
 
 [testenv]
 commands =
     zope-testrunner --test-path=src []
 deps =
     .[test]
+
+[testenv:coverage]
+usedevelop = true
+basepython =
+    python2.7
+commands =
+    coverage run -m zope.testrunner --test-path=src []
+    coverage report --fail-under=100
+deps =
+    {[testenv]deps}
+    coverage
