--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,19 @@ python:
   - 3.7
   - pypy
   - pypy3
+
+matrix:
+  include:
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+
 script:
   - coverage run -m zope.testrunner --test-path=src  --auto-color --auto-progress
 
 after_success:
   - coveralls
+
 notifications:
   email: false
 
