--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,10 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 include *.rst
 include *.txt
-include *.py
 include buildout.cfg
 include tox.ini
-include .coveragerc
-include .travis.yml
 
-recursive-include src *
-
-global-exclude *.pyc
-global-exclude *.so
-global-exclude *.dll
+recursive-include src *.py
+recursive-include src *.rst
+recursive-include src *.zcml
